# movie-watcher

./: .arch-context  .gitignore  README.md  docker-compose.yml
docs/: owner-manual.md
electron/: controls.html  main.js  package-lock.json  package.json  preload.js
native/mpv-embed/: Cargo.toml  build.rs  package-lock.json  package.json
native/mpv-embed/src/: lib.rs
tor-watcher/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  next.config.ts  package-lock.json  package.json
tor-watcher/app/: globals.css  layout.tsx  page.tsx  server-config.ts
tor-watcher/app/see-all/: page.tsx
tor-watcher/app/watch/: page.tsx
tor-watcher/components/app/: app-header.tsx
tor-watcher/components/filters/: filter-bar.tsx
tor-watcher/components/movies/: movie-grid.tsx  movie-quick-view.tsx  poster-card.tsx
tor-watcher/components/player/: VideoPlayer.backup.tsx  VideoPlayer.tsx
tor-watcher/components/rails/: CarouselRow.tsx
tor-watcher/components/search/: global-search.tsx
tor-watcher/components/state/: empty-state.tsx  skeleton-grid.tsx
tor-watcher/components/title/: episode-panel.tsx  torrent-panel.tsx
tor-watcher/components/torrentListModal/: torrentListDialog.tsx
tor-watcher/lib/: anime-matching.ts  title-types.ts  torrent-src.ts  types.ts
tor-watcher/lib/adapters/: media.ts  tmdb.ts
tor-watcher/lib/hooks/: use-debounce.ts  use-is-mobile.ts
tor-watcher/lib/imdb/: sqlite.ts
tor-watcher/scripts/: imdb-db.ts
torrent-streamer/: .env  .gitignore  go.mod  go.sum  main.go
torrent-streamer/migrations/: 001_core.sql
(+50 files in other folders)
