[package]
name = "mpv-embed"
version = "0.1.0"
edition = "2021"
authors = ["movie-watcher"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
libloading = "0.8"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"







